# Email-Consensus-dApp

./: .env  app.py  deploy.py  gui.py  imap.py  message.py  pgpkeys.py  pyproject.toml  smtp.py
PGP FILE/: pubring.kb_  pubring.kbx  random_seed  trustdb.gpg
PGP FILE/openpgp-revocs.d/: BBCBDF9F1D2E83ADE4432CB57BD1DF5DBD58F886.rev  E0B486852C55DBA33D577D135F1A21EF892BEA2D.rev
PGP FILE/private-keys-v1.d/: 38DF045EC5A28B6DC28BE0D833B70F80C89E6D4D.key  F9D787C5FE7E9495DCEB807E8680F8820512C86C.key
contracts/: BusinessConsensus.sol  MotherContract.sol
contracts/artifacts/: BusinessConsensus.json  BusinessConsensus_metadata.json  MotherContract.json  MotherContract_metadata.json
