[tool.poetry]
name = "pyproject.toml"
version = "poetry add -D \"web3-ethereum-defi[data]\""
description = "eth_defi"
authors = ["Your Name <you@example.com>"]
license = "k"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
web3-ethereum-defi = "^0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
